--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -120,5 +120,6 @@ jobs:
             echo SESSION_SERVICE_TAG=${{ env.SESSION_SERVICE_TAG }} >> .env
             echo AUTH_SERVICE_TAG=${{ env.AUTH_SERVICE_TAG }} >> .env
             echo CART_SERVICE_TAG=${{ env.CART_SERVICE_TAG }} >> .env
+            sudo docker volume create --name=grafana-storage
             sudo docker-compose down
             sudo docker-compose up -d
