OZON-129 Change nginx config

--- a/ansible/nginx/files/duckluckmarket.xyz.conf
+++ b/ansible/nginx/files/duckluckmarket.xyz.conf
@@ -17,14 +17,14 @@ server {
 
 
         location / {
-                proxy_pass https://duckluckmarket-front.hb.bizmrg.com;
+                proxy_pass https://duckluckmarket-front.hb.bizmrg.com/src/;
                 proxy_intercept_errors on;
                 proxy_redirect off;
                 error_page 403 /index.html;
         }
 
         location = / {
-                proxy_pass https://duckluckmarket-front.hb.bizmrg.com/index.html;
+                proxy_pass https://duckluckmarket-front.hb.bizmrg.com/src/index.html;
         }
 
         location /signup {
