--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -52,11 +52,11 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v1
+      - name: Install Go
+        if: success()
+        uses: actions/setup-go@v2
         with:
-          version: '1.16'
-        env:
-          GOPATH: $HOME
+          go-version: 1.15.x
       - uses: actions/checkout@v1
       - name: Get golang coverage to lcov formatter
         run: go get -u github.com/jandelgado/gcov2lcov
