--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -71,11 +71,11 @@ jobs:
         with:
           infile: cover.out
           outfile: cover.lcov
-      - name: Upload lcov
-        uses: romeovs/lcov-reporter-action@v0.2.16
+      - name: Coveralls
+        uses: coverallsapp/github-action@v1.0.4
         with:
           github-token: 7f5vCoUhJ1J92PtlpsIm4K0zpnpOTqQI1
-          lcov-file: cover.lcov
+          path-to-lcov: cover.lcov
 #      - name: Upload dependencies
 #        uses: actions/upload-artifact@v2
 #        with:
