--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -21,7 +21,7 @@ jobs:
             🌏
             !
           repo-token: ${{ secrets.TOKEN }}
-          allow-repeats: false # This is the default
+          allow-repeats: true # This is the default
 #
 #on:
 #  push:
