--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -56,9 +56,21 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.15.x
-      - uses: nelonoel/branch-name@v1
+      - name: Extract branch name
+        if: github.event_name != 'pull_request'
+        shell: bash
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
+      # extract branch name on pull request
+      - name: Print branch name
+        if: github.event_name == 'pull_request'
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_HEAD_REF})"
+
+      # print branch name
       - name: Get branch name
-        run: echo ${BRANCH_NAME}
+        run: echo 'The branch name is' $BRANCH_NAME
+
       - uses: actions/checkout@v1
       - name: Get full coverage
         run: go test -coverprofile=coverage1.out -coverpkg=./... -cover ./...
