--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -6,6 +6,7 @@ env:
   SESSION_SERVICE_TAG: v1.7
   AUTH_SERVICE_TAG: v1.7
   CART_SERVICE_TAG: v1.7
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
 on:
   push:
