--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -52,61 +52,64 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Go
-        if: success()
-        uses: actions/setup-go@v2
+#      - name: Install Go
+#        if: success()
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.15.x
+#      - name: Extract branch name
+#        if: github.event_name != 'pull_request'
+#        shell: bash
+#        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
+#        id: extract_branch
+#      - name: Create branch name variable
+#        if: github.event_name == 'pull_request'
+#        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_HEAD_REF})"
+#
+#      # print branch name
+#      - name: Get branch name
+#        run: echo 'The branch name is' $BRANCH_NAME
+#
+#      - uses: actions/checkout@v1
+#      - name: Get full coverage
+#        run: go test -coverprofile=coverage1.out -coverpkg=./... -cover ./...
+#      - name: Ignore some directories
+#        run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
+#      - name: Get total coverage
+#        run: go tool cover -func cover.out
+#      - name: Create badge
+#        run: |
+#          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
+#          if (( $(echo "$total <= 40" | bc -l) )) ; then
+#            COLOR=red
+#          elif (( $(echo "$total > 60" | bc -l) )); then
+#            COLOR=green
+#          else
+#            COLOR=orange
+#          fi
+#          mkdir $BRANCH_NAME
+#          curl "https://img.shields.io/badge/coverage-$total%25-$COLOR" > badge.svg
+#      - name: Upload badge to hotbox
+#        uses: jakejarvis/s3-sync-action@master
+#        with:
+#          args: --endpoint-url https://hb.bizmrg.com --acl public-read --exclude '*' --include 'badge.svg'
+#        env:
+#          AWS_S3_BUCKET: ${{ secrets.DUCKLUCK_COVERAGE_BUCKET }}
+#          AWS_ACCESS_KEY_ID: ${{ secrets.DUCKLUCK_COVERAGE_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.DUCKLUCK_COVERAGE_SECRET }}
+#
+#      - name: Create md file with cover
+#        run: cat cover.out > cover.md
+
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v1
         with:
-          go-version: 1.15.x
-      - name: Extract branch name
-        if: github.event_name != 'pull_request'
-        shell: bash
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-      - name: Create branch name variable
-        if: github.event_name == 'pull_request'
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_HEAD_REF})"
+          issue-number: 1
+          body: |
+            This is a multi-line test comment
+            - With GitHub **Markdown** :sparkles:
+            - Created by [create-or-update-comment][1]
 
-      # print branch name
-      - name: Get branch name
-        run: echo 'The branch name is' $BRANCH_NAME
-
-      - uses: actions/checkout@v1
-      - name: Get full coverage
-        run: go test -coverprofile=coverage1.out -coverpkg=./... -cover ./...
-      - name: Ignore some directories
-        run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
-      - name: Get total coverage
-        run: go tool cover -func cover.out
-      - name: Create badge
-        run: |
-          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
-          if (( $(echo "$total <= 40" | bc -l) )) ; then
-            COLOR=red
-          elif (( $(echo "$total > 60" | bc -l) )); then
-            COLOR=green
-          else
-            COLOR=orange
-          fi
-          mkdir $BRANCH_NAME
-          curl "https://img.shields.io/badge/coavrege-$total%25-$COLOR" > badge.svg
-      - name: Upload badge to hotbox
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --endpoint-url https://hb.bizmrg.com --acl public-read --exclude '*' --include 'badge.svg'
-        env:
-          AWS_S3_BUCKET: ${{ secrets.DUCKLUCK_COVERAGE_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.DUCKLUCK_COVERAGE_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DUCKLUCK_COVERAGE_SECRET }}
-
-      - name: Create md file with cover
-        run: cat cover.out > cover.md
-
-      - name: Write comment
-        uses: harupy/comment-on-pr@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          filename: cover.md
 
 
 #      - name: Upload dependencies
