--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -110,6 +110,8 @@ jobs:
             - With GitHub **Markdown** :sparkles:
             - Created by [create-or-update-comment][1]
 
+            [1]: https://github.com/peter-evans/create-or-update-comment
+          reactions: '+1'
 
 
 #      - name: Upload dependencies
