--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: 50
+          issue-number: ${{ github.event.number }}
           body: |
             This is a multi-line test comment
             - With GitHub **Markdown** :sparkles:
