--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -70,13 +70,13 @@ jobs:
 #      - name: Get branch name
 #        run: echo 'The branch name is' $BRANCH_NAME
 #
-#      - uses: actions/checkout@v1
-#      - name: Get full coverage
-#        run: go test -coverprofile=coverage1.out -coverpkg=./... -cover ./...
-#      - name: Ignore some directories
-#        run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
-#      - name: Get total coverage
-#        run: go tool cover -func cover.out
+      - uses: actions/checkout@v1
+      - name: Get full coverage
+        run: go test -coverprofile=coverage1.out -coverpkg=./... -cover ./...
+      - name: Ignore some directories
+        run: cat coverage1.out | grep -v mock | grep -v proto | grep -v cmd | grep -v middleware | grep -v models > cover.out
+      - name: Get total coverage
+        run: go tool cover -func cover.out
 #      - name: Create badge
 #        run: |
 #          total=`go tool cover -func=cover.out | grep total | grep -Eo '[0-9]+\.[0-9]+'`
@@ -101,17 +101,18 @@ jobs:
 #      - name: Create md file with cover
 #        run: cat cover.out > cover.md
 
+      - id: get-comment-body
+        run: |
+          body=$(cat cover.out)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
+          echo ::set-output name=body::$body
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.number }}
-          comment-author: 'DuckLuck Bot'
-          body: |
-            This is a multi-line test comment
-            - With GitHub **Markdown** :sparkles:
-            - Created by [create-or-update-comment][1]
-
-            [1]: https://github.com/peter-evans/create-or-update-comment
+          body: ${{ steps.get-comment-body.outputs.body }}
           reactions: eyes
 
 
